--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,38 @@
-.App {
-  text-align: center;
-}
+/* .flip-card {
+  background-color: transparent;
+  width: 700px;
+  height: 390px;
+  perspective: 1000px;
+} */
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+/* .flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+} */
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+/* .flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+} */
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+/* .flip-card-front,
+.flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+ */
+/* .flip-card-front {
+  background-color: #bbb;
+  color: black;
+} */
+/* 
+.flip-card-back {
+  background-color: #2980b9;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+  transform: rotateY(180deg);
+} */
